Use default allowed environments